# quadruped-robot-for-smart-agriculture-uofu

./: .gitmodules  README.md
Pictures and Videos/Fall/: IMG_5945.HEIC
Quadruped Robot for Smart Agriculture/: BOM.xlsx  Demo.pptx  Orange Pi 5 Figure.vsdx  RobotElectronics Sketch.fzz
Quadruped Robot for Smart Agriculture/CAD Files - ME EN 4000/Leg Parts/: Easy_Print_Mod_1_lower_leg_solid (1).SLDPRT  Easy_Print_Mod_1_upper_leg_module_cover_1.SLDPRT  Easy_Print_Mod_1_upper_leg_module_cover_2.SLDPRT  Easy_Print_Mod_1_upper_leg_module_shell (1).SLDPRT  Easy_Print_Mod_1_upper_leg_module_shell_1.SLDPRT  Easy_Print_Mod_1_upper_leg_module_shell_2.SLDPRT  Robo_Dog_Foot.SLDPRT  (+1 more)
Quadruped Robot for Smart Agriculture/Code - ME EN 4000/basewalk_ws/src/cpp_controller_node/: CMakeLists.txt  package.xml
Quadruped Robot for Smart Agriculture/Code - ME EN 4000/basewalk_ws/src/cpp_controller_node/scripts/: imureader.py
Quadruped Robot for Smart Agriculture/Code - ME EN 4000/basewalk_ws/src/cpp_controller_node/src/: IMU_node_cli.cpp  PID_controller.cpp  imufilterservice.cpp
Quadruped Robot for Smart Agriculture/Documentation/: Issues and Solutions.docx  README.docx  Suggested Next Steps.docx  Team 12- Quadruped for Agricultural Research Building Notes.docx
Quadruped Robot for Smart Agriculture/Fall Assignments/: Assignment 5 - Proof-of-Concept Test Plan .docx  Assignment 6 Proof-of-Concept Testing FALL24.docx  Milestones (not updated).docx  OLD GANTT CHART.xlsx  Project description.docx
Quadruped Robot for Smart Agriculture/Spring Assignments/: A)ME EN 4010 FINAL Report team 12.docx  Design Day Poster.pptx  Design Review 1 Spring.pptx  Design Review 2 Spring.pptx  Final Presentation Notes.docx  GANTT CHART (Ben_s Edit).xlsx  GANTT CHART February to end.xlsx  GANTT CHART_.xlsx  ME EN 4010 Midterm Report team 12.docx  Project Milestones Document.docx
(+74 files in other folders)
